Source/WebKit/UIProcess/ProvisionalPageProxy.h
@@ -79,7 +79,6 @@ public:
     void goToBackForwardItem(API::Navigation&, WebBackForwardListItem&, Optional<WebsitePoliciesData>&&);
     void cancel();
 
-    void processDidFinishLaunching();
     void processDidTerminate();
     void connectionWillOpen(IPC::Connection&);
 
@@ -115,7 +114,6 @@ private:
 #endif
 
     void initializeWebPage();
-    void finishInitializingWebPageAfterProcessLaunch();
 
     WebPageProxy& m_page;
     Ref<WebProcessProxy> m_process;
